--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
-<!--HEAD = config dos documentos-->
-<head>
-<title>INC-RODOLFO</title>
+    <head>    
+        
+    </head>
+</html>
+
+
+
+script>
+    console.log("Olá Pessoal");
+
+</script>
+
 </head>
+<script>
+    console.log("Olá Pessoal");
+</script>
+
 <!--BODY = conteudo da página-->
 <body>
     <div class="titulos">
@@ -171,4 +184,18 @@
 
 </body>
 
+<script>
+    alert("ola pessoal!");
+
+    if (true) {
+var x = 5
+}
+
+
+
+</script>
+
+<script src="Script.js"></script>
+
 </html>
+
